# ms-websocket

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.local  PRODUCTION_ROADMAP.md  build.rs  deploy-docker.sh  deploy.sh  docker-compose.yml
.agents/rules/: readme.md
.aiproject/: P0-product.md  P1-architecture.md  P2-code-style.md  P3-api.md  P4-security.md  P5-testing.md  P6-deploy.md  P7-observability.md  P8-performance.md  P9-ops.md  README.md
.gemini/: settings.json  styleguide.md
docs/: PERFORMANCE_GAP_ANALYSIS.md  TEST_PLAN.md
proto/: health.proto
src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs  types.rs
src/cache/: close_room_cache_key_builder.rs  constants.rs  friend_cache_key_builder.rs  local_router_cache.rs  mod.rs  presence_cache_key_builder.rs  room_admin_metadata_cache_key_builder.rs  room_metadata_cache_key_builder.rs  router_cache_key_builder.rs  user_rooms_cache_key_builder.rs  video_rooms_cache_key_builder.rs
src/enums/: call_response_status.rs  mod.rs  ws_push_type.rs  ws_req_type.rs
src/grpc/: client.rs  mod.rs
src/kafka/: mod.rs
src/kafka/consumer/: mod.rs  msg_login_handler.rs  push_handler.rs  scan_success_handler.rs
src/model/: mod.rs  ws_base_resp.rs
src/model/dto/: ack_message_dto.rs  call_end_req.rs  login_message_dto.rs  mod.rs  node_push_dto.rs  read_message_dto.rs  router_push_dto.rs  scan_success_message_dto.rs
src/model/entity/: room.rs
src/model/vo/: all_muted_vo.rs  call_accepted_vo.rs  call_rejected_vo.rs  call_req_vo.rs  call_request_vo.rs  call_response_vo.rs  call_timeout_vo.rs  heartbeat_req.rs  media_control_vo.rs  mod.rs  network_quality_vo.rs  room_closed_vo.rs  screen_sharing_vo.rs  start_signaling_vo.rs  user_join_room_vo.rs  user_kicked_vo.rs  video_signal_vo.rs  ws_online_notify.rs
src/routes/: mod.rs  test_push.rs
src/service/: mod.rs  push_service.rs  room_metadata_service.rs  room_timeout_service.rs  session_recovery_service.rs  video_chat_service.rs
src/websocket/: handler.rs  mod.rs  nacos_session_registry.rs  session_manager.rs  timing_wheel.rs
tests/: entity_tests.rs  enum_tests.rs  message_chain_tests.rs  model_tests.rs  processor_tests.rs  session_manager_tests.rs
tests/cache/: friend_cache_key_builder_tests.rs  local_router_cache_tests.rs  main.rs  presence_cache_key_builder_tests.rs
tests/common/: mod.rs
tests/integration/: integration_tests.rs  main.rs  nacos_registry_tests.rs
tests/processor/: main.rs  message_chain_extended_tests.rs  message_chain_tests.rs  processor_tests.rs
tests/session/: main.rs  session_manager_extended_tests.rs  session_manager_tests.rs  session_presence_tests.rs
tests/timing/: main.rs  timing_wheel_extended_tests.rs  timing_wheel_integration_tests.rs
tests/unit/: entity_tests.rs  enum_tests.rs  main.rs  model_tests.rs
(+18 files in other folders)
