[package]
name = "ws-server"
version = "0.1.0"
edition = "2024"

[dependencies]
fbc-starter = { path = "../fbc-starter", features = ["redis", "nacos", "balance", "producer", "consumer"] }

axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
anyhow = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
redis = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

