[package]
name = "ms-websocket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fbc-starter = { path = "../fbc-starter", features = ["redis", "nacos", "balance", "producer", "consumer"] }

axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
redis = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

