[package]
name = "ms-websocket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fbc-starter = { workspace = true, features = ["redis", "nacos", "balance", "producer", "consumer"] }

axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
redis = { workspace = true }
config.workspace = true

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
# 测试框架
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"
fake = "2.9"

# WebSocket 测试
tokio-tungstenite = "0.24"

# Redis 测试
testcontainers = "0.23"

# HTTP 测试
axum-test = "19.1"
tower = { workspace = true, features = ["util"] }

# 断言增强
assert_matches = "1.5"
pretty_assertions = "1.4"

# 性能测试
criterion = "0.5"
